<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OrderActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagePizza"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/buildyourownpizza" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_an_order"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_height="50dp"
            android:layout_width="160dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
           />

        <Spinner
            android:id="@+id/styleSpinner"
            android:layout_height="50dp"
            android:layout_width="160dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_height="50dp"
            android:layout_width="160dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crustTextField"
            android:text="@string/crust"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/toppingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    </LinearLayout>


    <TextView
        android:id="@+id/subTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_24"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/add_to_order" />


    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/return_to_main_menu" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>

</ScrollView>